--- a/index.html
+++ b/index.html
@@ -1539,6 +1539,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="layout-chunk" data-layout="l-body">
 
 </div>
+<h2 id="results">Results</h2>
 <h2 id="food-deserts-in-urban-vs.-rural-counties">Food Deserts in Urban vs. Rural Counties</h2>
 <div class="layout-chunk" data-layout="l-body">
 <p><img src="index_files/figure-html5/unnamed-chunk-6-1.png" width="624" /></p>
